# praktika-vortaro-dicts

./: .flake8  .gitignore  .gitmodules  .python-version  Dockerfile  Pipfile  README.md  cli.py  docker-compose.yml  download_revo.sh  fabfile.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  vortaro.py  wrapper.py
.github/workflows/: pythonapp.yml
aulex/: process_aulex.py
eo_dicts/: README.md  cli.py  process_pmeg.py  process_revo.py  search.py  test_parser.py  test_revo.py  test_string_with_format.py  utils.py
eo_dicts/parser/: dictionary.py  revo.py  string_with_format.py
eo_dicts/tests/: test_dictionary.py  test_parser.py  test_process.py  test_revo.py  test_string_with_format.py  test_utils.py
espdic/: SOURCE  process_espdic.py
pmeg/: README.md  pmeg_index.json
revo/: Dockerfile  process_revo.py  requirements.txt  search.py  test_parser.py  test_revo.py  test_string_with_format.py  utils.py
revo/parser/: parser_revo.py  revo.py  string_with_format.py
