[project]
name = "praktika_vortaro_dicts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "humanize>=4.11.0",
    "lxml>=5.3.0",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "black==22.10.0",
    # https://github.com/psf/black/issues/2964
    "click<=8.1.0",
    "ipython>=8.31.0",
    "mypy>=1.14.0",
    "pytest>=8.3.4",
]
